--- a/app/views/admin/main_events/_show.html.arb
+++ b/app/views/admin/main_events/_show.html.arb
@@ -13,13 +13,15 @@ context.instance_eval do
     table_for(resource.event_intros) do
       column(:about_title)
       column(:title)
-      column(:image) { |event| image_tag(event.image_url, height: 150) }
+      column(:image) { |intro| image_tag(intro.image_url.to_s, height: 150) }
       column(:description)
-      column(:actions) do
-        edit_link = link_to I18n.t('active_admin.edit'), edit_resource_path(resource), class: 'edit_link member_link', title: I18n.t('active_admin.edit')
+      column(:actions) do |intro|
+        edit_link = link_to I18n.t('active_admin.edit'), edit_admin_main_event_event_intro_url(resource, intro),
+                            class: 'edit_link member_link', title: I18n.t('active_admin.edit')
 
-        delete_link = link_to I18n.t('active_admin.delete'), resource_path(resource), class: 'delete_link', title: I18n.t('active_admin.delete'),
-                method: :delete, data: {confirm: I18n.t('active_admin.delete_confirmation')}
+        delete_link = link_to I18n.t('active_admin.delete'), admin_main_event_event_intro_url(resource, intro),
+                              class: 'delete_link', title: I18n.t('active_admin.delete'),
+                              method: :delete, data: {confirm: I18n.t('active_admin.delete_confirmation')}
 
         edit_link + delete_link
       end
