--- a/config/locales/model.zh-CN.yml
+++ b/config/locales/model.zh-CN.yml
@@ -26,6 +26,7 @@
         begin_time: "开始时间"
         end_time: "结束时间"
         published: "发布在官网"
+        pdf_name: "pdf名称"
       event_intro:
         main_event: "主赛"
         about_title: "简短标题"
