--- a/app/views/admin/videos/_index.html.arb
+++ b/app/views/admin/videos/_index.html.arb
@@ -4,6 +4,7 @@ context.instance_eval do
   column(:intro)
   column(:image) { |video| image_tag(video.image_url.to_s, height: 150) }
   column(:duration)
+  column(:position)
   column(:published)
   actions
 end
