完成tournament 部分翻译

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -6,3 +6,28 @@ en:
     news: 'NEWS'
     videos: 'VIDEOS'
     online_poker: 'ONLINE POKER'
+  home:
+    bg_text_1: 'Focus on top global competitive games and'
+    bg_text_2: 'surrounding entertainment services.'
+    a_intro_title_1: 'ABOUT'
+    a_intro_content: 'Certified Genius Corp (Asia) was founded in August 2016 by Mr. Mario Ho, invested by the US dollar fund SIG Heiner Asia, focusing on providing top-notch Asian competitions and peripheral entertainment services to competitive gamers around the world. Officially authorized by the WSOP since 2018. The first WSOP ASIA will be held in …'
+    b_intro_content: 'WSOP ASIA is presented by Certified Genius (HK) Limited. With HKD 30 million guaranteed prize pool and the world’s best in attendance we are extremely pleased to be hosting such a prestigious event for the first time in Macau, China. There’re a number of iconic hot events, and we also have Asian featured events. Players will be able to compete for high prizes and the gold bracelet that representing the highest glory of WSOP. We ensure that players of all levels can enjoy greatest pleasure in WSOP ASIA.'
+    a_home_jump_item: 'EVENT ZONE OF WSOP-ASIA'
+    b_home_jump_item: 'LATEST NEWS'
+    c_home_jump_item: 'ONLINE POKER'
+  cg_asia:
+    a_title: 'ABOUT'
+    a_text: 'Certified Genius Corp (Asia) was founded in August 2016 by Mr. He Junjun, invested by the US dollar fund SIG Heiner Asia, focusing on providing top-notch Asian competitions and peripheral entertainment services to competitive gamers around the world. Officially authorized by the WSOP since 2018. The first WSOP ASIA will be held in April 2019 and will be held in other countries and regions in Asia. Welcome to continue to pay attention.'
+    b_title: 'Mario Ho'
+    b_text_1: '- CEO at Certified Genius Corp (Asia)'
+    b_text_2: '- President of Macao E-Sports Federation'
+  tour:
+    title_label: 'TOURNAMENT'
+    prize_pool: 'PRIZE POOL'
+    introduction: 'INTRODUCTION'
+    main_event: 'MAIN EVENT'
+    side_event: 'SIDE EVENT'
+    schedule: 'Schedule'
+    structure: 'Structure'
+    prize: 'Prize'
+    location: 'Location'
