--- a/config/locales/home.zh-CN.yml
+++ b/config/locales/home.zh-CN.yml
@@ -6,3 +6,28 @@ zh-CN:
     news: '新闻'
     videos: '视频'
     online_poker: '线上扑克'
+  home:
+    bg_text_1: '专注于全球顶级竞技游戏和'
+    bg_text_2: '周边娱乐服务'
+    a_intro_title_1: '关于'
+    a_intro_content: 'Certified Genius Corp (Asia)由何猷君先生于2016年8月创立，由美元基金SIG海纳亚洲投资，专注为全球的竞技游戏爱好者提供落地亚洲的顶尖赛事与周边娱乐服务。自2018年起，经由WSOP官方授权，首届WSOP ASIA将于2019年4月举办，并将陆续在亚洲其他国家和地区开办周边赛，欢迎持续关注。'
+    b_intro_content: '世界扑克系列赛亚洲赛（WSOP ASIA）是由Certified Genius (HK) Limited举办的一个全球性扑克高额赛事。本次赛事首次落户中国澳门，凭借着3000万港币的超高保底奖池吸引了众多世界级牌手以及高端扑克爱好者参与其中，他们将联袂给我们奉献一场牌坛盛宴！此外WSOP ASIA 除了有多项标志性的热门赛事外，还同时具备别具亚洲特色的赛事，玩家将能够角逐高额奖金及代表着扑克最高荣耀的WSOP特有纯金宝石手链，保证各个级别的扑克爱好者都能够尽情享受WSOP ASIA的乐趣！'
+    a_home_jump_item: 'WSOP-ASIA比赛专区'
+    b_home_jump_item: '最新新闻动态'
+    c_home_jump_item: '在线扑克'
+  cg_asia:
+    a_title: '关于'
+    a_text: 'Certified Genius Corp (Asia)由何猷君先生于2016年8月创立，由美元基金SIG海纳亚洲投资，专注为全球的竞技游戏爱好者提供落地亚洲的顶尖赛事与周边娱乐服务。自2018年起，经由WSOP官方授权，首届WSOP ASIA将于2019年4月举办，并将陆续在亚洲其他国家和地区开办周边赛，欢迎持续关注。'
+    b_title: '何猷君 <br/>Mario Ho'
+    b_text_1: '- Certified Genius Corp（亚洲）首席执行官'
+    b_text_2: '- 澳门电子竞技总会会长'
+  tour:
+    title_label: '比赛'
+    prize_pool: '奖金池'
+    introduction: '赛事简介'
+    main_event: '主赛信息'
+    side_event: '边赛信息'
+    schedule: '赛程表'
+    structure: '盲注结构'
+    prize: '奖金分配'
+    location: '赛事举办地'
