--- a/config/locales/home.zh-CN.yml
+++ b/config/locales/home.zh-CN.yml
@@ -4,6 +4,7 @@ zh-CN:
     cg_asia: 'CG 亚洲'
     tournament: '比赛'
     news: '新闻'
+    more_news: '更多新闻'
     videos: '视频'
     online_poker: '线上扑克'
   home:
@@ -30,4 +31,10 @@ zh-CN:
     schedule: '赛程表'
     structure: '盲注结构'
     prize: '奖金分配'
-    location: '赛事举办地'
+    location: '举办地'
+    date_time: '日期/时间'
+    event: '赛事'
+    buyin: '买入'
+    chip: '起始筹码'
+    guarantee: '保底'
+    detail: '详情'
